Fixed two footer problems (jumping, z-order). I didn't modify the header.

--- a/frontend/src/sass/_addItemForm.scss
+++ b/frontend/src/sass/_addItemForm.scss
@@ -41,7 +41,7 @@ select:hover {
 .form-submit-hint3 {
   border-radius: 5px;
   background-color: #70e1e9;
-  padding: 8px 20px 15px 20px;
+  padding: 8px 18px 15px 18px;
   z-index: 1;
   margin: auto;
   position: absolute;
@@ -56,6 +56,7 @@ select:hover {
   text-align: right;
   margin: 0 0 -30px 0;
   cursor: pointer;
+  font-weight: bold;
 }
 
 
