--- a/frontend/src/sass/_footer.scss
+++ b/frontend/src/sass/_footer.scss
@@ -1,8 +1,10 @@
-
-// wrapper with a calculation to prevent the page content to overlap with footer. Calculation based on the footer height
-.footer-fix {
-    min-height: calc(84vh - 70px);
- }
- .footer {
-    min-height: 50px;
- }
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  /* background-color: #efefef; */
+  /* text-align: center; */
+  z-index: -1;
+}
